--- a/food-order-app/public/index.html
+++ b/food-order-app/public/index.html
@@ -7,8 +7,7 @@
 		<title>Food Order App</title>
 	</head>
 	<body>
-		<div id="backdrop-root"></div>
-		<div id="overlay-root"></div>
+		<div id="overlays"></div>
 		<div id="root"></div>
 	</body>
 </html>
